--- a/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
+++ b/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
@@ -95,6 +95,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
