--- a/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
+++ b/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
@@ -137,11 +137,17 @@
     <Compile Include="Migrations\201802192159270_intial.Designer.cs">
       <DependentUpon>201802192159270_intial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802192330219_purchase.cs" />
+    <Compile Include="Migrations\201802192330219_purchase.Designer.cs">
+      <DependentUpon>201802192330219_purchase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BookstoreDbContext.cs" />
     <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Purchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PurchaseViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +160,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Purchase.cshtml" />
+    <Content Include="Views\Home\Purchased.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -167,6 +175,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802192159270_intial.resx">
       <DependentUpon>201802192159270_intial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802192330219_purchase.resx">
+      <DependentUpon>201802192330219_purchase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
