Have some problems with an exception. Submitting changes so far

--- a/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
+++ b/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
@@ -137,10 +137,6 @@
     <Compile Include="Migrations\201802192159270_intial.Designer.cs">
       <DependentUpon>201802192159270_intial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201802192330219_purchase.cs" />
-    <Compile Include="Migrations\201802192330219_purchase.Designer.cs">
-      <DependentUpon>201802192330219_purchase.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
@@ -162,6 +158,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Purchase.cshtml" />
     <Content Include="Views\Home\Purchases.cshtml" />
+    <Content Include="Views\Home\AddAuthor.cshtml" />
+    <Content Include="Views\Home\AddMember.cshtml" />
+    <Content Include="Views\Home\Member.cshtml" />
+    <Content Include="Views\Home\Books.cshtml" />
+    <Content Include="Views\Home\Authors.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -175,9 +176,6 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802192159270_intial.resx">
       <DependentUpon>201802192159270_intial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201802192330219_purchase.resx">
-      <DependentUpon>201802192330219_purchase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
