--- a/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
+++ b/bit285-multiple-entities-demo/bit285-multiple-entities-demo.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Migrations\201802211831496_full-entities.Designer.cs">
       <DependentUpon>201802211831496_full-entities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803180035488_new.cs" />
+    <Compile Include="Migrations\201803180035488_new.Designer.cs">
+      <DependentUpon>201803180035488_new.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
@@ -144,6 +148,7 @@
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\Purchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AddBookViewModel.cs" />
     <Compile Include="ViewModels\PurchaseViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
   </ItemGroup>
@@ -159,6 +164,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Purchases.cshtml" />
     <Content Include="Views\Home\Purchase.cshtml" />
+    <Content Include="Views\Home\Books.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -172,6 +178,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802211831496_full-entities.resx">
       <DependentUpon>201802211831496_full-entities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803180035488_new.resx">
+      <DependentUpon>201803180035488_new.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
